Middle-click support (#59)
* Emote List - allow card middle click

* User - allow middle click on emote cards

* Allow middle-click on "create emote" button

* Allow middle-click on nav logo

--- a/src/app/emotes/emote-list/emote-list.component.html
+++ b/src/app/emotes/emote-list/emote-list.component.html
@@ -26,11 +26,11 @@
 					</div>
 
 					<div class="d-flex flex-wrap justify-content-center">
-						<div (click)="selectEmote(emoteEl, emote)"  #emoteEl *ngFor="let emote of emotes | async" class="is-emote-card">
+						<a href (click)="selectEmote($event, emoteEl, emote)"  #emoteEl *ngFor="let emote of emotes | async" class="is-emote-card unstyled-link">
 							<app-emote-card [emote]="emote" [contextMenu]="contextMenu.emoteMenu" (openContext)="onOpenCardContextMenu($event)">
 				
 							</app-emote-card>
-						</div>
+						</a>
 					</div>
 				</div>
 			</div>
