--- a/src/styles.scss
+++ b/src/styles.scss
@@ -60,3 +60,8 @@ mat-icon {
   top: 0;
   right: 0;
 }
+
+a.unstyled-link, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
+}
