--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -16,10 +16,10 @@
                         <app-user-name [clickable]="false" [size]="[0, 1]" [showAvatar]="false" [user]="user | async"></app-user-name>
                     </div>
 
-                    <div class="user-details" [style.color]="(user | async)?.getColor() | async">
+                    <div class="user-details" [style.color]="(user | async)?.getColor() | async" *ngIf="(user | async) !== null">
                         <div class="user-buttons">
                             <div class="user-button" matTooltip="Twitch Channel" (click)="openTwitchChannel()" [appColor]="themingService.colors.twitch_purple">
-                                <mat-icon [svgIcon]="'twitch'"></mat-icon>
+                                <mat-icon [svgIcon]="(themingService.getSvgIcon('twitch') | async) || ''"></mat-icon>
                             </div>
 
                             <div class="user-button" appColor="white" matTooltip="More..." [matMenuTriggerFor]="contextMenu.userMenu">
