--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -12,5 +12,19 @@
     .content {
         display: block;
         padding: 2.5%;
+
+        .feature-list {
+            margin-bottom: 1em;
+            .feature-name {
+                padding-left: 1em;
+                padding-bottom: .25em;
+                padding-top: .25em;
+                display: flex;
+                align-items: center;
+                font-size: 1.15em;
+
+                span { margin-left: .5em; }
+            }
+        }
     }
 }
