--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,6 +14,10 @@
 					<h1 class="slogan-text">
 						{{appService.description}}
 					</h1>
+
+					<div class="slogan-explanation">
+						A new emote service and extension for Twitch. <a href [routerLink]="['/about']">Learn more.</a>
+					</div>
 				</div>
 			</div>
 
