--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -16,6 +16,11 @@
 		text-align: center;
 		line-height: 1.25em;
 	}
+
+	.slogan-explanation {
+		font-size: 1em;
+		text-align: center;
+	}
 }
 
 .browser-icon {
