Emote List - Querystring Search (#69)
* Emote List - Fix pagination lockup after search

* Append Query Params on search/page change

* Remove page index bump

* Use `totalEmotes` to determine length

* Await authentication before requesting emotes

* Persist & apply url query options

* Send requests starting at page 1

--- a/src/app/emotes/emote-list/emote-list.component.html
+++ b/src/app/emotes/emote-list/emote-list.component.html
@@ -1,7 +1,7 @@
 <div class="emote-list flex-fill row justify-content-center justify-content-lg-start">
 	<!-- Sidebar -->
 	<div class="emotes-sidebar col-12 col-lg-3 col-xl-3">
-		<app-emote-search (searchChange)="handleSearchChange($event)"></app-emote-search>
+		<app-emote-search [defaultSearchOptions]="currentSearchOptions" (searchChange)="handleSearchChange($event)"></app-emote-search>
 	</div>
 	<div class="col-12 d-block d-lg-none my-3"></div>
 
@@ -37,8 +37,8 @@
 		
 			<!-- Pagination menu -->
 			<mat-paginator #paginator (page)="onPageEvent($event)" [@fadeout]="selecting | async"
-				[showFirstLastButtons]="true" [pageIndex]="pageOptions?.page"
-				[length]="pageOptions?.length || (totalEmotes | async)" [pageSize]="pageSize | async">
+				[showFirstLastButtons]="true" [pageIndex]="pageOptions?.pageIndex"
+				[length]="totalEmotes | async" [pageSize]="pageSize | async">
 		
 			</mat-paginator>
 		</div>
