--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -89,7 +89,7 @@
 
 .user-as-editor {
 	display: flex;
-	align-items: flex-start;
+	align-items: flex-end;
 	flex-direction: column;
 	margin-top: .15em;
 
