Show "mark all read" button only after loaded (#70)

--- a/src/app/notifications/notify-menu.component.html
+++ b/src/app/notifications/notify-menu.component.html
@@ -9,7 +9,7 @@
 			</div>
 		</div>
 		<div class="quick-actions">
-			<a class="quick-action mark-all-read" (click)="markAllRead()" *ngIf="!clientService.isImpersonating && !allClear">
+			<a class="quick-action mark-all-read" (click)="markAllRead()" *ngIf="!clientService.isImpersonating && !allClear && loaded">
 				Mark All Read
 			</a>
 		</div>
