--- a/src/app/admin/mod-queue/admin-mod-queue.component.scss
+++ b/src/app/admin/mod-queue/admin-mod-queue.component.scss
@@ -10,7 +10,6 @@
 				display: flex;
 				align-items: center;
 				height: 64px;
-				height: 64px;
 				margin-bottom: .33em;
 				margin-top: .33em;
 				width: 100%;
@@ -18,6 +17,7 @@
 
 				img {
 					margin-right: 1em;
+					max-height: 64px;
 					width: 64px;
 				}
 
