--- a/src/app/emotes/emote/emote-channel-card.component.html
+++ b/src/app/emotes/emote/emote-channel-card.component.html
@@ -1,7 +1,7 @@
 <div matRipple class="emote-channel-card mat-elevation-z1" *ngIf="!!user" [appColor]="themingService.bg.lighten(.2)" [isBackground]="true">
 
 	<!-- Content -->
-	<a class="card-content" [routerLink]="['/users', user.getID() | async]" [appColor]="themingService.bg.lighten(.35)" [isBackground]="true" [onHoverOnly]="true">
+	<a class="card-content unstyled-link" [routerLink]="['/users', user.getID() | async]" [appColor]="themingService.bg.lighten(.35)" [isBackground]="true" [onHoverOnly]="true">
 
 		<!-- Username -->
 		<div class="username-container">
