--- a/src/app/user/user-home/user-home.component.html
+++ b/src/app/user/user-home/user-home.component.html
@@ -23,7 +23,7 @@
 	<div class="heading" [appColor]="themingService.primary.darken(.075)" [isBackground]="true">
 		Emotes Enabled ({{(channelCount | async) || 0}}/{{((user | async)?.getEmoteSlots() | async) || 0}})
 	</div>
-	<div class="channel-emote-list" [appColor]="themingService.bg.lighten(.1)" [isBackground]="true">
+	<a href class="channel-emote-list unstyled-link" (auxclick)="$event.preventDefault()" [appColor]="themingService.bg.lighten(.1)" [isBackground]="true">
 		<div class="is-emote-card" *ngFor="let emote of channelEmotes | async | slice :0:channelShown; trackBy: trackBy; let last = last;">
 			<app-emote-card [blur]="isBlurred(emote)" [routerLink]="['/emotes', emote.getID()]" [size]="8" [emote]="emote" [contextMenu]="contextMenu.emoteMenu" (openContext)="contextMenu.contextEmote = $event"></app-emote-card>
 		</div>
@@ -31,7 +31,7 @@
 		<div *ngIf="channelShown < (channelCount.getValue())">
 			<div *ngTemplateOutlet="showMore; context: { setName: 'channel' }"></div>
 		</div>
-	</div>
+	</a>
 
 	<mat-divider class="my-3"></mat-divider>
 
@@ -39,7 +39,7 @@
 	<div class="heading" [appColor]="themingService.primary.darken(.075)" [isBackground]="true">
 		Emotes by {{(user | async)?.getUsername() | async}} ({{(ownedCount | async) || 0}})
 	</div>
-	<div class="channel-emote-list" [appColor]="themingService.bg.lighten(.1)" [isBackground]="true">
+	<a href class="channel-emote-list unstyled-link" (auxclick)="$event.preventDefault()" [appColor]="themingService.bg.lighten(.1)" [isBackground]="true">
 		<div class="is-emote-card" *ngFor="let emote of ownedEmotes | async | slice :0:ownedShown; trackBy: trackBy">
 			<app-emote-card [blur]="isBlurred(emote)" [routerLink]="['/emotes', emote.getID()]" [size]="8" [emote]="emote" [contextMenu]="contextMenu.emoteMenu" (openContext)="contextMenu.contextEmote = $event"></app-emote-card>
 		</div>
@@ -47,7 +47,7 @@
 		<div *ngIf="ownedShown < (ownedCount.getValue())">
 			<div *ngTemplateOutlet="showMore; context: { setName: 'owned' }"></div>
 		</div>
-	</div>
+	</a>
 
 	<mat-divider class="my-3"></mat-divider>
 
