--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -27,4 +27,9 @@
             }
         }
     }
+
+    .faq-question {
+        p { font-weight: 500; }
+        span { margin-left: 1em; }
+    }
 }
