store - fix duped paragraph for gift page

--- a/src/app/store/callback/store-callback.component.html
+++ b/src/app/store/callback/store-callback.component.html
@@ -5,7 +5,7 @@
 			<h1 *ngSwitchCase="true">Thanks for the gift sub!</h1>
 
 			<div class="thank-you-text">
-				<div>
+				<div *ngSwitchCase="false">
 					<p>
 						It may take up to five minutes for your perks to activate. If this time has passed and you have 
 						not yet received your perks, please let us know and we will sort it out.
