Store - Top Gifter Medalists (#130)

--- a/src/app/store/store.component.html
+++ b/src/app/store/store.component.html
@@ -66,6 +66,10 @@
 					</div>
 				</div>
 			</div>
+			
+			<div class="store-medalists">
+				<app-store-leaderboards [medalists]="true"></app-store-leaderboards>
+			</div>
 		</div>
 		
 		<div class="store-heading-gradient" #gradient></div>
