Update subscriber page (founders badge gone)

--- a/src/app/store/store-subscribe/subscribe-promotion.component.html
+++ b/src/app/store/store-subscribe/subscribe-promotion.component.html
@@ -7,15 +7,11 @@
 					Subscriber Badge
 					<span class="perk-description">
 						Get a global subscriber chat badge that evolves over time.
-						<p class="mt-1">
-							<span class="font-weight-bold" [style.color]="'red'">Limited time only</span>:
-							Earn an exclusive <span [style.color]="'#5acee0'">Founders Badge</span> by subscribing before October 1st, 2021
-						</p>
 					</span>
 				</span>
 
-				<div class="perk-image" matTooltip="Subscriber (Founder)" matTooltipPosition="above">
-					<img class="badge1" src="/assets/brand/badge-sub-founder.webp">
+				<div class="perk-image" matTooltip="Subscriber (1 Month)" matTooltipPosition="above">
+					<img class="badge1" src="/assets/brand/badge-sub-1.webp">
 				</div>
 			</div>
 
